syntax = "proto3";

import "google/protobuf/timestamp.proto"; // Imports Timestamp
import "google/protobuf/wrappers.proto"; // Imports StringValue
import "google/protobuf/struct.proto"; // Imports ListValue
option go_package = "go.blogging.api/bloggingapi";

package bloggingapi;

// The Blogging API's definition.
service bloggingapi {
  rpc CreateBlog (BlogPost) returns (BlogPostWithUid){}
  rpc ReadBlog (BlogPostID) returns (BlogPostWithUid) {}
  rpc UpdateBlog(BlogPostWithUid) returns (BlogPostWithUid);
  rpc DeleteBlog(BlogPostID) returns (google.protobuf.StringValue);
}

message BlogPostWithUid {
  uint32 postID = 1;
  BlogPost post = 2;
}

// The message containing the blog's details.
message BlogPost {
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp publicationdate = 5;
  google.protobuf.ListValue tags = 6;
}

// The message containing the requested blog's ID
message BlogPostID {
  uint32 postid = 1;
}
